sensord (0.7.0) unstable; urgency=low

  [Antti Virtanen]
  * Removed possibility of having multiple sensors inside single DeviceAdaptor. This feature was never used.
  * DeviceAdaptor::init() added. Subclasses can implement this to initialize themselves.
  * SysfsAdaptor and InputDevAdaptor init() implemented. They try to find adaptor configuration from section which is named after the adaptor type.
  * Removed hardcoded metadata definitions from adaptors. This will now come from config file.
  * Renamed all configuration file entries.
  * Removed logic from Loader to handle deviceId based hierarchy. This is replaced by having different config file for each device type.
  * New option added: --config-dir.
  * Added upstart job definition.
  * Changed init script to use correct config for ncdk.
  * Fixed makefiles to copy correct config files.
  * Modified unit tests to use different configs in different deployments.

  [Timo Rongas]
  * Prevent reading values from empty list in SysfsAdaptor

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Thu, 03 Feb 2011 18:46:11 +0200

sensord (0.6.38) unstable; urgency=low

  [Shenghua Liu]
  * Orientation rotation improvement. Fixes: NB#223261
  * Fixes: NB#223772
  * 

 -- shenghua <ext-shenghua.1.liu@nokia.com>  Thu, 03 Feb 2011 11:17:28 +0200

sensord (0.6.37) unstable; urgency=low

  [Antti Virtanen]
  * Optimized Qt container loops to use constBegin() and constEnd().
  * Optimized some funcs to return and take params as const refs when possible.
  * Removed ununsed and deprecated code.
  * AbstractSensorChannel, DeviceAdaptor and SysfsAdaptor now hides internal data.
  * SysfsAdaptor destructor implemented.
  * Fixed few compiler warnings.
  * SocketReader didn't read buffer to empty if it contained more items buffered. Fixed: NB#222132.

  [Shenghua Liu]
  * Partly fixing the random failure problem for contestfw002 test
  * Fix the screen rotation problem, Fixes: NB#219958

  [Timo Rongas]