@@ -8,10 +8,14 @@ intervals = "0,10=>1000"
 transformation_matrix = "-1,0,0,0,-1,0,0,0,-1"
 
 [als]
-path = /sys/bus/i2c/drivers/apds990x/0-0039/lux_output
+driver_type = 3
+mode = 1
+seek = 1
+path = /sys/devices/pci0000:00/0000:00:00.3/i2c-0/0-0039/lux0_input
+powerstate_path = /sys/devices/pci0000:00/0000:00:00.3/i2c-0/0-0039/power_state
 dataranges = "0=>65535"
-intervals = "50=>2000"
-default_interval = 1000
+intervals = "0"
+default_interval = 0
 
 [keyboardslider]
 input_match = gpio-keys
