@@ -143,20 +143,27 @@ public:
      */
     virtual void processSample(int pathId, int fd) = 0;
 
-protected slots:
-    void dataAvailable(int pathId, int fd);
-
-protected:
     /**
-     * Utility function for writing to files. Can be used to control sensor driver
-     * parameters (setting to powersave mode etc.)
+     * Utility function for writing to sysfs entries.
      *
      * @param path    Path of the file to write to
      * @param content What to write
      * @return True on success, false on failure.
      */
-    bool writeToFile(QString path, QString content);
+    static bool writeToFile(const QByteArray& path, const QByteArray& content);
 
+    /**
+     * Utility function for reading from sysfs entries.
+     *
+     * @param path    Path of the file to read from
+     * @return Content of the file
+     */
+    static QByteArray readFromFile(const QByteArray& path);
+
+protected slots:
+    void dataAvailable(int pathId, int fd);
+
+protected:
     /**
      * Returns the current interval (see setInterval()). Valid for PollMode.
      * Reimplementation for adaptors using SelectMode is a must.
